--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             I'm a Front-end Developer, UI/UX designer and freelance Illustrator.
           </p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <a
+              href="Yousra-Elhour-Resume.pdf"
+              download="Yousra-Elhour-Resume.pdf"
+              class="main-btn"
+            >
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -48,10 +52,11 @@
         <div class="about-container">
           <!-- <h4>About me</h4> -->
           <p>
-            Building creative tech solutions is my biggest passion, and coding
-            has been a life-long hobby for me. I fell in love with front-end
-            development and UX design as a creative artist, combining both my
-            love for design and coding.
+            I am currently pursuing my bachelor's degree for software
+            engineering and building creative tech solutions was always my
+            biggest passion, coding has been a life-long hobby for me. I fell in
+            love with front-end development and UX design as a creative artist,
+            combining both my love for design and coding.
           </p>
           <!-- <div class="btn-con">
             <a href="#" class="main-btn">
@@ -235,15 +240,18 @@
         <div class="portfolios">
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/Homepage.png" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>E-shopping website</h3>
               <div class="icons">
                 <a href="#" class="icon">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
+                <a
+                  href="https://www.behance.net/gallery/147408103/E-commerce-website-for-shoes"
+                  class="icon"
+                >
                   <i class="fab fa-behance"></i>
                 </a>
                 <a href="#" class="icon">
@@ -486,6 +494,7 @@
                   ></textarea>
                 </div>
                 <input type="hidden" name="_captcha" value="false" />
+                <input type="hidden" name="_next" value="pages/thankyou.html" />
                 <div class="submit-btn">
                   <button type="submit">
                     <a href="#" class="main-btn">
