--- a/index.html
+++ b/index.html
@@ -494,7 +494,11 @@
                   ></textarea>
                 </div>
                 <input type="hidden" name="_captcha" value="false" />
-                <input type="hidden" name="_next" value="pages/thankyou.html" />
+                <input
+                  type="hidden"
+                  name="_next"
+                  value="https://yousra-elhour.netlify.app/pages/thankyou.html"
+                />
                 <div class="submit-btn">
                   <button type="submit">
                     <a href="#" class="main-btn">
