--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -21,7 +21,9 @@
     />
   </head>
   <body class="main-content">
-    <h1>Thank you!</h1>
-    <p>I'm getting back to you as soon as I see the email.</p>
+    <div class="content-thankyou">
+      <h1 class="thanks">Thank you!</h1>
+      <p>I'm getting back to you as soon as I see the email.</p>
+    </div>
   </body>
 </html>
