--- a/index.html
+++ b/index.html
@@ -500,13 +500,9 @@
                   value="https://yousra-elhour.netlify.app/pages/thankyou.html"
                 />
                 <div class="submit-btn">
-                  <button type="submit">
-                    <a href="#" class="main-btn">
-                      <span class="btn-text">Send Email</span>
-                      <span class="btn-icon"
-                        ><i class="fa fa-envelope"></i
-                      ></span>
-                    </a>
+                  <button type="submit" class="main-btn">
+                    <span class="btn-text">Send Email</span>
+                    <span class="btn-icon"><i class="fa fa-envelope"></i></span>
                   </button>
                 </div>
               </form>
