--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                 <a
                   href="https://www.behance.net/gallery/147408103/E-commerce-website-for-shoes"
                   class="icon"
+                  target="_blank"
                 >
                   <i class="fab fa-behance"></i>
                 </a>
@@ -262,18 +263,24 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port2.jpg" alt="" />
+              <img src="img/mapty-project.PNG" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Mapty Project</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/cirrusyk/mapty-project"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
+
+                <a
+                  href="https://mapty-jsproject.netlify.app"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fas fa-eye"></i>
                 </a>
               </div>
@@ -281,18 +288,24 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port3.jpg" alt="" />
+              <img src="img/pig-game.PNG" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Pig game</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/cirrusyk/pig-game"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
+
+                <a
+                  href="https://yousra-piggame.netlify.app"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fas fa-eye"></i>
                 </a>
               </div>
@@ -305,10 +318,10 @@
             <div class="hover-items">
               <h3>Project Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="#" class="icon" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
+                <a href="#" class="icon" target="_blank">
                   <i class="fab fa-behance"></i>
                 </a>
                 <a href="#" class="icon">
