--- a/index.html
+++ b/index.html
@@ -313,18 +313,24 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port4.jpg" alt="" />
+              <img src="img/guess-number.PNG" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Guess Number Game</h3>
               <div class="icons">
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://github.com/cirrusyk/guess-number"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
+
+                <a
+                  href="https://yousra-guessnumber.netlify.app"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fas fa-eye"></i>
                 </a>
               </div>
@@ -332,18 +338,24 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port5.jpg" alt="" />
+              <img src="img/landing-page.PNG" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Landing page Bankist</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/cirrusyk/landing-bankist"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
+
+                <a
+                  href="https://landingpage-bankist.netlify.app"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fas fa-eye"></i>
                 </a>
               </div>
