--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
         <div class="about-container">
           <!-- <h4>About me</h4> -->
           <p>
-            I am currently pursuing my bachelor's degree for software
-            engineering and building creative tech solutions was always my
-            biggest passion, coding has been a life-long hobby for me. I fell in
-            love with front-end development and UX design as a creative artist,
-            combining both my love for design and coding.
+            Building creative tech solutions was always my biggest passion and
+            coding has been a life-long hobby for me. I fell in love with
+            front-end development and UX design as a creative artist, combining
+            both my love for design and coding. I am currently pursuing my
+            bachelor's degree for software engineering and I'm enjoying every
+            moment of it.
           </p>
           <!-- <div class="btn-con">
             <a href="#" class="main-btn">
@@ -363,38 +364,24 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port2.jpg" alt="" />
+              <img src="img/social-media.PNG" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>University social media app</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/cirrusyk/SistConnect"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
+                <a
+                  href="https://www.behance.net/gallery/147408235/University-social-media-app-concept"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-eye"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-eye"></i>
                 </a>
               </div>
             </div>
