--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
             <div class="hover-items">
               <h3>E-shopping website</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/cirrusyk/e-shop-project"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
                 <a
@@ -142,9 +146,6 @@
                   target="_blank"
                 >
                   <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-eye"></i>
                 </a>
               </div>
             </div>
