--- a/index.html
+++ b/index.html
@@ -419,10 +419,11 @@
       <div class="control" data-id="about">
         <i class="fas fa-user"></i>
       </div>
-      <div class="control" data-id="portfolio">
+      <a href="#portfolio">
+     <div class="control" data-id="portfolio">
         <i class="fas fa-briefcase"></i>
       </div>
-
+      </a>
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
       </div>
