--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
         </div>
       </section>
-      <section class="container" id="portfolio">
+      <div class="container" id="portfolio">
         <div class="main-title">
           <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
         </div>
@@ -275,7 +275,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
       <section class="container contact" id="contact">
         <div class="contact-container">
